--- a/client/src/style.css
+++ b/client/src/style.css
@@ -9,3 +9,9 @@
 body {
     font-family: "Montserrat", Arial, sans-serif;
 }
+
+.nav-link {
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0 10px;
+}
