--- a/client/src/style.css
+++ b/client/src/style.css
@@ -10,6 +10,10 @@ body {
     font-family: "Montserrat", Arial, sans-serif;
 }
 
+.container {
+    padding: 20px;
+}
+
 .nav-link {
     display: inline-block;
     padding: 5px 10px;
